--- a/templates/school/footer.html
+++ b/templates/school/footer.html
@@ -63,12 +63,12 @@
 
 <footer>
 
-   <!-- <p>
-    <a href="#" class="fa fa-facebook"></a>
+    <p>
+    <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
     <a href="#" class="fa fa-whatsapp"></a>
     <a href="#" class="fa fa-instagram"></a>
     <a href="#" class="fa fa-twitter"></a>
-  </p> --> 
+    </p>  
 
   <br>
   <div class="container">
